Add WIP config api with IMS' redesign of the options page and contaria's forge mod entrypoint loader code